Fix subtitle padding
The subtitles have been moved closer to the text that appears below
them.

--- a/source/assets/stylesheets/_pages.scss
+++ b/source/assets/stylesheets/_pages.scss
@@ -20,7 +20,7 @@
 }
 
 .subtitle {
-	margin-bottom: vr(0.5);
+	margin-bottom: 0;
 	display: inline-block;
 	padding: 0 0.25em 0.075em 0.05em;
 	border-top: 0.12em solid $colour-black;
